# pythonopenscad

./: .gitattributes  .gitignore  .pydevproject  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml
examples/: README.md  m3d_viewer_example.py  primitive_viewer_example.py  text_render_example.py  viewer_example.py
examples/Code Gists/OpenScad Primitives/3D_Shapes/: cylinder_03.py  (+3 more)
examples/Code Samples/OpenScad Primitives/: README.md
examples/Gists/OpenScad Primitives/: README.md
examples/gists_2d/: README.md  circle_example.py  polygon_example.py  square_example.py
examples/gists_3d/: README.md  polyhedron_example.py
examples/gists_csg/: README.md  difference_operator.py  intersection_operator.py
examples/gists_other/: README.md  global_variables_example.py  modifier_background_example.py  modifier_disable_example.py  modifier_show_only_example.py  modules_example.py
examples/gists_transforms/: README.md  color_example.py  linear_extrude_example.py  mirror_example.py  offset_example.py  projection_example.py  rotate_example.py  rotate_extrude_example.py
src/ParametricSolid/: core.py  core_test.py  datatree.py  datatree_test.py  extrude.py  extrude_test.py  extrude_test_2.py  fabricator.py  fabricator_runner.py  fabricator_test.py  graph_model.py  graph_model_test.py  linear.py  linear_test.py  path_ops.py  renderer.py  renderer_test.py  test_tools.py
src/anchorscad/: requirements.txt  run.py
src/anchorscad/runner/: anchorscad_runner.py  runner_status.py
src/pythonopenscad/: __init__.py  base.py  base_test.py  dask_anno.py  m3dapi.py  modifier.py  posc_main.py  text_render.py  text_render5.py  text_utils.py  viewer.py
src/pythonopenscad/examples/: gist_generator.py
src/pythonopenscad/viewer/: axes.py  basic_models.py  bbox.py  bbox_render.py  glctxt.py  model.py  ps_viewer.py  shader.py  viewer.py  viewer_base.py
src/tests/: base_test.py
tests/: base_m3dapi_test.py  base_test.py  base_viewer_test.py  example_object.py  m3dapi_test.py  test_text_render.py  test_text_utils.py  test_triangulate_3d_face.py  test_viewer.py
(+101 files in other folders)
