[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "pythonopenscad"
version = "1.1.0"
authors = [
    { name = "Gianni Mariani", email = "gianni@mariani.ws" },
]
description = "Yet Another Python OpenSCAD API. This is a thin wrapper for generating OpenSCAD 3D model scripts."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/owebeeone/pythonopenscad"
"Bug Tracker" = "https://github.com/owebeeone/pythonopenscad/issues"

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
