[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "pythonopenscad"
version = "2.2.3"
authors = [
    { name = "Gianni Mariani", email = "gianni@mariani.ws" },
]
description = "Yet Another Python OpenSCAD API. This is a thin wrapper for generating OpenSCAD 3D model scripts."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "distributed>=2025.1.0",
    "numpy>=2.2.1",
    "manifold3d>=3.1.0",
    "mapbox-earcut>=1.0.3",
    "mapbox>=0.18.1",
    "frozendict>=2.3.0",
    "fonttools>=4.57.0",
    "pillow>=11.0.0",
    "uharfbuzz>=0.48.0",
    "datatrees>=0.2.1",
    "numpy-stl>=3.2.0",
    "pyopengl>=3.1.9",
    "pyglm>=2.8.0",
    "hershey-fonts>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/owebeeone/pythonopenscad"
"Bug Tracker" = "https://github.com/owebeeone/pythonopenscad/issues"

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
